# rustifying-serverless

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
analytics-extension/: Cargo.toml
analytics-extension/src/: main.rs
s3-admin/: template.yaml
s3-admin-app/: samconfig.toml  template.yaml
s3-admin-app/authorizer_python/: app.py
s3-admin-app/authorizer_rust/: Cargo.toml
s3-admin-app/authorizer_rust/src/: main.rs
s3-admin-app/get-s3-details-node/: app.mjs  package.json
s3-admin-app/list-buckets-node/: app.mjs  package-lock.json  package.json
s3-admin-app/list-buckets-rust-node/: app.mjs  index.d.ts  index.js  package-lock.json  package.json
s3-admin-app/list_buckets_python/: app.py  requirements.txt
s3-admin-app/list_buckets_rust/: requirements.txt
s3-admin-app/list_buckets_rust_python/: app.py
s3-admin/authorizer_python/: app.py
s3-admin/list_buckets/: app.py  requirements.txt
s3-ops-rust-lib/: Cargo.toml  Dockerfile  pyproject.toml  s3_ops_rust.pyi
s3-ops-rust-lib/src/: lib.rs
s3-ops-rust-napi-lib/: Cargo.toml  index.d.ts  index.js  package.json
s3-ops-rust-napi-lib/npm/linux-arm64-gnu/: README.md  package.json
s3-ops-rust-napi-lib/npm/linux-x64-gnu/: README.md  package.json
s3-ops-rust-napi-lib/src/: lib.rs
s3-ops-rust-pyo3-lib/src/: lib.rs
