[tool.poetry]
name = "rustifying-serverless"
version = "0.1.0"
description = "How to use Rust in your existing Serverless projects"
authors = ["Efi Merdler-Kravitz <efi.merdler@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
build-lib="maturin build -m s3-ops-rust-lib/Cargo.toml --strip --release --zig -o .rust-lib"
deploy-app={shell = "cd s3-admin-app && sam build --no-cached && sam deploy"}
build-all=["build-lib","deploy-app"]
update-dependencies={shell = "poetry remove s3-ops-rust && poetry add .rust-lib/s3_ops_rust-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl --group dev"}

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.23.1"}
boto3 = "^1.28.37"
black = "^23.7.0"
ipython = "^8.14.0"
maturin = {extras = ["zig"], version = "^1.2.3"}
wheel = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
