[tool.poetry]
name = "rustifying-serverless"
version = "0.1.0"
description = "How to use Rust in your existing Serverless projects"
authors = ["Efi Merdler-Kravitz <efi.merdler@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
build-lib="maturin build -m s3-ops-rust-lib/Cargo.toml --strip --release --zig -o .rust-lib"
deploy-app={shell = "cd s3-admin-app && sam build --no-cached && sam deploy"}
build-and-deploy-app=["build-lib","deploy-app"]
build-extension="cargo lambda build --manifest-path analytics-extension/Cargo.toml --extension --release"
deploy-extension="cargo lambda deploy --manifest-path analytics-extension/Cargo.toml --extension"
build-and-deploy-extension=["build-extension", "deploy-extension"]
update-dependencies={shell = "poetry remove s3-ops-rust && poetry add .rust-lib/s3_ops_rust-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl --group dev"}

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.23.1"}
black = "^23.7.0"
ipython = "^8.14.0"
wheel = "^0.41.2"
aiobotocore = "^2.6.0"
uvloop = "^0.17.0"
aiolimiter = "^1.1.0"


[tool.poetry.group.rust-dev-tools.dependencies]
maturin = "^1.2.3"
cargo-lambda = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
