[package]
name = "s3_ops_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "s3_ops_rust"
crate-type = ["cdylib"]

[dependencies]
aws-config = { version = "0.56.1", features = ["rustls"] }
aws-sdk-s3 = "0.30.0"
futures = "0.3.28"
once_cell = "1.18.0"
pyo3 = "0.19.0"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread"] }
