[package]
edition = "2021"
name = "s3-ops-rust-napi-lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aws-config = "1.1.2"
aws-sdk-s3 = "1.12.0"
futures = "0.3.30"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.14.6"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
